# teste_jeux-

./: CMakeLists.txt  Makefile  README.md  idf_component.yml  lv_conf.h  sdkconfig.defaults
components/can/: CMakeLists.txt  can.c  can.h
components/config/: CMakeLists.txt  game_mode.c  game_mode.h
components/env_control/: CMakeLists.txt  env_control.c  env_control.h
components/fonts/: CMakeLists.txt  font48.c  font48CN.c
components/gpio/: CMakeLists.txt  gpio.c  gpio.h  gpio_real.c  gpio_sim.c
components/gui_paint/: CMakeLists.txt  Debug.h  gui_bmp.c  gui_bmp.h  gui_paint.c  gui_paint.h  ui_sprite.c  ui_sprite.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/image/: CMakeLists.txt  image.c  image.h  reptile_boire.c  reptile_chauffer.c  reptile_happy.c  reptile_idle.c  reptile_manger.c  reptile_sad.c
components/io_extension/: CMakeLists.txt  io_extension.c  io_extension.h
components/logging/: CMakeLists.txt  logging.c  logging.h
components/lovyangfx_port/: CMakeLists.txt  LGFX_S3_RGB.cpp  LGFX_S3_RGB.hpp
components/lvgl_port/: CMakeLists.txt  lv_draw_gfx.h  lvgl_gpu_lgfx.c  lvgl_gpu_lgfx.cpp  lvgl_port.c  lvgl_port.cpp  lvgl_port.h
components/reptile_logic/: CMakeLists.txt  reptile_logic.c  reptile_logic.h
components/rgb_lcd_port/: rgb_lcd_port.c  rgb_lcd_port.h
components/sd/: CMakeLists.txt  sd.c  sd.h
components/sensors/: CMakeLists.txt  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  reptile_game.c  reptile_game.h  reptile_real.c  reptile_real.h  settings.c  settings.h  sleep.h
tests/: sim_reptile.c
(+8 files in other folders)
